Prof. Jennifer Rupp elected to the MRS Board of Directors
October 24, 2025
Starting January 1, 2026, Prof. Jennifer L.M. Rupp (TU Munich) will join the Board of Directors of the Materials Research Society (MRS) for a three-year term. The MRS is one of the world’s most influential organizations in materials science, shaping the strategic direction of the global research community. <br>Rupp, an expert in solid-state electrolytes, batteries, and energy materials, contributes to technologies crucial for the energy transition and future storage solutions. <br>Her appointment gives German energy research a strong voice in the international MRS network. For the e-conversion Cluster of Excellence, this is a significant signal, highlighting the global importance of advanced energy materials and opening new opportunities for collaboration in batteries, interfaces, and sustainable energy storage.

Investorgroup InnoEnergy Leads Pre-Seed Investment in the Chair´s company Qkera
October 8, 2025
Investorgroup InnoEnergy Leads Pre-Seed Investment in the Chair´s company Qkera (<a href="https://www.qkera.com/" target="_blank">Qkera.com</a>) to Accelerate Next-Generation Battery Commercialisation. <a href="https://innoenergy.com/news-resources/innoenergy-leads-pre-seed-investment-in-qkera-to-accelerate-next-generation-battery-commercialisation/" target="_blank">Read more</a>.

Stanford and TUM Professors Discuss Sciencepreneurship
February 17, 2025
During the recent Munich Security Conference 2025, a Sciencepreneurship discussion was held featuring Professors William Chueh and Jimmy Chen from Stanford University, alongside Professor Jennifer L.M. Rupp from TUM. The panel focused on the intersection of scientific research and entrepreneurial ventures, emphasizing collaborative innovation between the two institutions. The event was part of the TUM Speakers Series.
<small><img src="sicherheitskonf.jpg" class="" style="width: 600px;"></small>

Battery Start-up Incubator Launches at TUM