@@ -101,6 +101,14 @@
 
 <tr><td>
     <a class="anchor" id="news1"></a>
+    <h6 class="mb-1">Sustainability of Functional Ceramics </h6> 
+    <div class='font-weight-light'>December 22, 2025</div>
+    <p><small>How can functional ceramics be employed in a sustainable way throughout their life cycle? What aspects are to be considered during development, manufacturing, usage and recycling? To shine light on these very relevant questions, our group teamed up, considered various materials and came up with an action plan to lower CO<sub>2</sub>-equivalent emissions. The <a href="https://www.nature.com/articles/s41565-025-02076-y" target="_blank">review</a> was not only recently published in Nature Nanotechnology, but was even featured in a <a href="https://www.nature.com/articles/s41565-025-02105-w" target="_blank">Senior Editor's editorial</a>. Find out more in the <a href="https://www.e-conversion.de/functional-ceramics-review-en/" target="_blank">e-conversion report</a> about their work. Congratulations to the first-authors Steffen and Lucie as well as all others involved!</small></p>
+
+</td></tr>
+
+<tr><td>
+    <a class="anchor" id="news2"></a>
     <h6 class="mb-1">Prof. Jennifer Rupp elected to the MRS Board of Directors </h6> 
     <div class='font-weight-light'>October 24, 2025</div>
     <p><small>Starting January 1, 2026, Prof. Jennifer L.M. Rupp (TU Munich) will join the Board of Directors of the Materials Research Society (MRS) for a three-year term. The MRS is one of the world’s most influential organizations in materials science, shaping the strategic direction of the global research community. <br>Rupp, an expert in solid-state electrolytes, batteries, and energy materials, contributes to technologies crucial for the energy transition and future storage solutions. <br>Her appointment gives German energy research a strong voice in the international MRS network. For the e-conversion Cluster of Excellence, this is a significant signal, highlighting the global importance of advanced energy materials and opening new opportunities for collaboration in batteries, interfaces, and sustainable energy storage.</small></p>
@@ -108,7 +116,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news2"></a>
+    <a class="anchor" id="news3"></a>
     <h6 class="mb-1">Investorgroup InnoEnergy Leads Pre-Seed Investment in the Chair´s company Qkera </h6> 
     <div class='font-weight-light'>October 8, 2025</div>
     <p><small>Investorgroup InnoEnergy Leads Pre-Seed Investment in the Chair´s company Qkera (<a href="https://www.qkera.com/" target="_blank">Qkera.com</a>) to Accelerate Next-Generation Battery Commercialisation. <a href="https://innoenergy.com/news-resources/innoenergy-leads-pre-seed-investment-in-qkera-to-accelerate-next-generation-battery-commercialisation/" target="_blank">Read more</a>.</small></p>
@@ -116,7 +124,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news3"></a>
+    
     <h6 class="mb-1">Stanford and TUM Professors Discuss Sciencepreneurship </h6> 
     <div class='font-weight-light'>February 17, 2025</div>
     <p><small>During the recent Munich Security Conference 2025, a Sciencepreneurship discussion was held featuring Professors William Chueh and Jimmy Chen from Stanford University, alongside Professor Jennifer L.M. Rupp from TUM. The panel focused on the intersection of scientific research and entrepreneurial ventures, emphasizing collaborative innovation between the two institutions. The event was part of the TUM Speakers Series.</small></p>
