@@ -1,3 +1,7 @@
+Sustainability of Functional Ceramics
+December 22, 2025
+How can functional ceramics be employed in a sustainable way throughout their life cycle? What aspects are to be considered during development, manufacturing, usage and recycling? To shine light on these very relevant questions, our group teamed up, considered various materials and came up with an action plan to lower CO<sub>2</sub>-equivalent emissions. The <a href="https://www.nature.com/articles/s41565-025-02076-y" target="_blank">review</a> was not only recently published in Nature Nanotechnology, but was even featured in a <a href="https://www.nature.com/articles/s41565-025-02105-w" target="_blank">Senior Editor's editorial</a>. Find out more in the <a href="https://www.e-conversion.de/functional-ceramics-review-en/" target="_blank">e-conversion report</a> about their work. Congratulations to the first-authors Steffen and Lucie as well as all others involved!
+
 Prof. Jennifer Rupp elected to the MRS Board of Directors
 October 24, 2025
 Starting January 1, 2026, Prof. Jennifer L.M. Rupp (TU Munich) will join the Board of Directors of the Materials Research Society (MRS) for a three-year term. The MRS is one of the world’s most influential organizations in materials science, shaping the strategic direction of the global research community. <br>Rupp, an expert in solid-state electrolytes, batteries, and energy materials, contributes to technologies crucial for the energy transition and future storage solutions. <br>Her appointment gives German energy research a strong voice in the international MRS network. For the e-conversion Cluster of Excellence, this is a significant signal, highlighting the global importance of advanced energy materials and opening new opportunities for collaboration in batteries, interfaces, and sustainable energy storage.
